manifests/wiki/postgres-manifest.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: wiki
  labels:
    app: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: arm64v8/postgres:12
        ports:
        - containerPort: 5432
          name: postgresdb
        volumeMounts:
        - name: pv-data
          mountPath: /var/lib/postgresql/data
          readOnly: false
      volumes:
      - name: pv-data
        persistentVolumeClaim:
          claimName: postgres-pvc-nfsv3
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: wiki
  labels:
    app: postgres
spec:
  type: ClusterIP
  ports:
   - port: 5432
  selector:
   app: postgres
