manifests/wiki/wikijs-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: wiki
  namespace: wiki
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: wiki.my.example.com
    http:
      paths:
      - backend:
          serviceName: wikijs
          servicePort: 3000
