manifests/wiki/wikijs-manifest.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: "wikijs"
  namespace: wiki
spec:
  ports:
    - name: http
      port: 3000
  selector:
    app: "wikijs"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wikijs
  namespace: wiki
  labels:
    app: wikijs
spec:
  selector:
    matchLabels:
      app: wikijs
  template:
    metadata:
      labels:
        app: wikijs
    spec:
      containers:
      - name: wikijs
        image: requarks/wiki:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
          name: http
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: wiki
  namespace: wiki
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: wiki.home.houseofthesol.com
    http:
      paths:
      - backend:
          serviceName: wikijs
          servicePort: 3000
